assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');

/* Background Color */
:root {
    background-color: #F2EC94;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-size: 62.5%;
    font-family: 'Lato', sans-serif;
}

/* Header */
.header {
    color: white;
    background-color: #295FA6;
    font-size: 35px;
    height: 5rem;
    left: 0;
    padding: 1rem;
    position: fixed;
    text-align: center;
    top: 0;
    width: 100%;
}

/* Main Section */
.main {
    justify-content: center;
    text-align: center;
    padding: 12%;
}

/* "Click for New Word" */
#text {
    color: #295FA6;
    font-size: 20px;
    padding-bottom: 25px;
    font-weight: 900;
}

/* Random Word */
#word {
    padding-bottom: 30px;
    font-size: 35px;
}

/* Definition for Random Word */
#definition {
    font-size: 18px;
    color: rgb(78, 78, 78);
    font-weight: bolder;
    padding-bottom: 30px;
}

/* Button */
#btn {
    border: 0;
    width: 150px;
    height: 28px;
    font-size: 16px;
    border-radius: 30px;
    color: white;
    background-color: #F25050;
}

#btn:hover {
    cursor: pointer;
    background-color: #F29C6B;
}

#btn:active {
    background-color: #A69797;
}

/* Footer */
.footer {
    color: white;
    font-size: medium;
    background-color: #F25050;
    height: 5rem;
    justify-content: center;
    position: fixed;
    padding: 1rem;
    left: 0;
    bottom: 0;
    width: 100%;
    text-align: right;
}

